# lemma

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  SECURITY.md  harness-progress.txt  harness-tasks.json  install.bat  install.sh  package-lock.json  package.json  tsconfig.electron.json  vitest.workspace.ts
DEPRECATED/backend/: lemma-server.spec  mypy.ini  pyproject.toml  run_stability.py  server_main.py  stability_test.py  start.py
DEPRECATED/backend/config/: models.yaml
DEPRECATED/backend/data/models/: 优化类.md  图论类.md  方法选择决策树.md  机理分析类.md  竞赛类型适配.md  评价类.md  预测类.md
DEPRECATED/backend/data/references/: blocking_levels.md  figure_patterns.md  (+6 more)
DEPRECATED/backend/tests/: conftest.py  test_academic_agent.py  test_api_auth.py  test_api_server.py  test_api_websocket.py  test_audit.py  test_cascade.py  test_checkpoint.py  test_cost_governance.py  test_dag.py  test_debate.py  test_doc_version.py  test_domain.py  test_domain_market.py  test_evidence_map.py  test_evolve.py  test_exporter_ext.py  test_extensions.py  test_failure_modes.py  test_figure_generator.py  test_fuzzer.py  test_handoff.py  test_hitl.py  test_isolation.py  test_knowledge_graph.py  test_knowledge_loader.py  test_latex_compiler.py  test_llm_judge.py  test_logging_config.py  test_mcp.py  test_memory.py  test_observability.py  test_orchestration_engine.py  test_perf_monitor.py  test_performance_regression.py  test_plugin.py  test_prompt_version.py  test_quality_checker.py  test_quality_metrics.py  test_rag_pipeline.py  (+14 more)
(+330 files in other folders)
